test/webgl/error/line_directive.true
File 0, line 50, col 6 - 8:
invalid octal constant "09"

File 0, line 9, col 6 - 8:
line control arguments must be specified in decimal

File 0, line 2, col 8 - 11:
line control arguments must be specified in decimal

File 15, line 3, col 6 - 9:
line control arguments must be specified in decimal

File 15, line 3, col 10 - 13:
line control arguments must be specified in decimal

Fatal: unrecoverable parse error (2)
